--- a/packages.tex
+++ b/packages.tex
@@ -8,7 +8,7 @@
 %\titlespacing*{\subsection}{0pt}{0.8*\baselineskip}{0.6*\baselineskip}
 % break glass in case of emergency
 %\titlespacing*{\section}{0pt}{0pt}{0pt}
-%\titlespacing*{\subsection}{0pt}{0pt}{0pt}
+\titlespacing*{\subsection}{2pt}{2pt}{2pt}
 %\titlespacing*{\subsubsection}{0pt}{0pt}{0pt}
 
 \usepackage{amsmath}
@@ -91,7 +91,7 @@
 \usepackage{alltt}
 %
 %\captionsetup[table]{skip=-1pt,font={footnotesize}}
-\captionsetup[subfigure]{skip=-1pt,font={footnotesize}}
+%\captionsetup[subfigure]{skip=-1pt,font={footnotesize}}
 \captionsetup[figure]{skip=-1pt,font={small}}
 \addtolength{\belowcaptionskip}{-10pt}
 \Urlmuskip=0mu plus 1mu
