--- a/robust.tex
+++ b/robust.tex
@@ -5,11 +5,9 @@
 Can \name successfully revert to status-quo performance in the presence of buffer-filling cross traffic, then resume providing benefits once that cross traffic leaves?
 In Figure~\ref{fig:eval:bigexp}, we show this scenario.
 At first, the link is occupied only by \name's traffic, similar to the setup described in \S\ref{s:eval:setup}.
-\radhika{do we have a backlog flow in the bundle here? If yes, mention it. If not, delete this comment.}
-\an{don't think so. @frank pls confirm}
-At time $t=60$sec, a buffer-filling cross traffic flow arrives/
+At time $t=60$sec, a buffer-filling cross traffic flow arrives.
 \name detects its presence (indicated by the gray shading) and starts pushing more packets into the network to compete fairly, reverting back to performance that is slightly worse than Status Quo (median FCT for short flows is \bigexpElasticSlowdownWorseness higher). 
-Performance is slightly worse because of the $10$ms queue that \name continues to maintain at its \inbox for active probing to detect the cross-traffic's departure, as described in \S\ref{s:queue-ctl}\footnote{We believe the benefits provided by \name in the more common regime with no competing buffer filling cross traffic are substantial enough to allow for this slight degradation in these specific scenarios.}.  \radhika{edited last two sentences. pls check.}
+Performance is slightly worse because of the \fc{check: $10$ms} queue that \name continues to maintain at its \inbox for active probing to detect the cross-traffic's departure, as described in \S\ref{s:queue-ctl}\footnote{We believe the benefits provided by \name in the more common regime with no competing buffer-filling cross traffic are substantial enough to make up for slight degradation in these specific scenarios.}. 
 At time $t=120$sec, the buffer-filling flow stops and non-buffer-filling traffic starts, generated from the same distribution as \name as described in \S\ref{s:eval:setup}.
 \name correctly detects that it is safe to resume delay-control, and continues providing scheduling benefits.
 \radhika{In the graph, rewrite `Queueing Delay' as `In-network Queueing Delay'.} 
@@ -25,13 +23,15 @@ Figure~\ref{fig:robust:cr-inelastic} shows that \name continues to provide benef
 \paragrapha{Buffer-filling flows} 
 %Competition from persistent backlogged flows (recall from \S\ref{s:deploy} that this condition is rare) that fill the bottleneck link's buffer is the worst-case scenario for \name.
 We now evaluate how \name's throughput is impacted due to competition from varying amount of buffer-filling cross-traffic.
-\radhika{are these all longlived flows in the bundle?}
+\radhika{are these all longlived flows in the bundle?}\fc{yes, 20 flows inside, 10-50 flows outside}
 %As described in \S\ref{s:queue-ctl}, \name's congestion controller must push packets into the bottleneck queue to compete fairly, and thus it cannot retain packets at the \inbox for scheduling. 
 %Furthermore, recall that \name maintains a $10$ms queue at the \inbox in this case. 
 As discussed earlier, in this (rare) scenario, we expect component flows in a bundle to experience slightly higher RTTs compared to \baseline.
 We indeed see its impact in Figure~\ref{fig:robust:cr-elastic}, 
 %, as we vary the number of competing Cubic cross-traffic flows.
-where the component flows in the bundle experience  \bundlerElasticTputWorseness less throughput on average. Notice how the the impact on \name's throughput (which stems from the extra queuing at the \inbox) is independent of the amount of cross-traffic: the bundled flows experience \bundlerElasticTputWorsenessTen lower throughput with 10 competing flows and \bundlerElasticTputWorsenessFifty lower throughput with 50. \radhika{please fill -- the trend could be interesting.}
+where the component flows in the bundle experience  \bundlerElasticTputWorseness less throughput on average. Notice how the the impact on \name's throughput (which stems from the extra queuing at the \inbox) is independent of the amount of cross-traffic: the bundled flows experience \bundlerElasticTputWorsenessTen lower throughput with 10 competing flows and \bundlerElasticTputWorsenessFifty lower throughput with 50. 
+\radhika{please fill -- the trend could be interesting.} 
+\an{filled}
 %Note that FCTs may not increase as much; in Figure~\ref{fig:eval:bigexp}, during the elastic cross traffic period the median short flow FCT is
 %\bigexpElasticSlowdownWorseness higher.
 \radhika{edited this. basically wanted to bring up the `performance is worse point' sooner when we discuss Fig 8, as opposed to towards the end of section, as it would have confused readers.}
@@ -40,7 +40,10 @@ where the component flows in the bundle experience  \bundlerElasticTputWorseness
 \paragrapha{Competing Bundles} Last, we evaluate the case where flows from multiple bundles compete with one another. 
 In Figure~\ref{fig:robust:twobundler}, we show the performance with two bundles of traffic competing with one another at the same bottleneck link. 
 Both bundles comprise of web requests along with a backlogged Cubic flow. 
-Even in the presence of this buffer-filling cross traffic, \radhika{??? i believe the backlog flow is in the bundles and not outside it} both bundles maintain low queueing in the network and successfully control the queues at the \inbox.
+Even in the presence of this buffer-filling cross traffic, 
+\radhika{??? i believe the backlog flow is in the bundles and not outside it}
+\an{yes, it is, that's why the perf is good. I agree we should reword, it is confusing}
+both bundles maintain low queueing in the network and successfully control the queues at the \inbox.
 Thus, \name provides benefits for both bundles, even when the amount of traffic in each bundle is different.  
 
 \subsection{Impact of Congestion Control}\label{s:eval:cc}
@@ -62,4 +65,3 @@ We used Cubic congestion control at the endhosts for our experiments so far. Whe
 %: in Figure~\ref{fig:eval:traffic}, \name achieves 58\% lower FCTs in the median compared to the updated \baseline where the endhosts use BBR. 
 %This is primarily because in the \baseline using BBR causes endhosts to achieve 66\% worse median slowdown ($1.62$ with Cubic to $2.68$ with BBR); \name's slowdown is only 5\% worse when endhosts use BBR ($1.08$ with Cubic to $1.14$ with BBR). 
 This shows that \name is compatible with multiple endhost congestion control algorithms.
-\radhika{removed extra BBR details here. Seemed unfair to Reno results :)} 
