--- a/eval.tex
+++ b/eval.tex
@@ -5,12 +5,11 @@
 Given \name's ability to move the in-network queues to the \inbox (as shown earlier in Figure~\ref{fig:design:shift-bottleneck}), we now explore:
 \begin{enumerate}[leftmargin=15pt]
     \item Where do \name's performance benefits come from? We discuss this in the context of improving the flow completion times of \name's component flows. (\S\ref{s:eval:fct})
-    \item Can \name enforce different scheduling policies? (\S\ref{s:eval:policies})
+    \item Can \name effectively control the queues on real Internet paths? (\S\ref{s:eval:realworld})
     \item Do \name's performance benefits hold across different scenarios? (\S\ref{s:robust:cross})
-    %\item Under what conditions do \name's performance benefits hold? (\S\ref{s:robust:cross})
+    \item Can \name enforce different scheduling policies? (\S\ref{s:eval:policies})
 \end{enumerate}
 \fc{Come back and update these after eval is finished}
-
 
 \subsection{Experimental Setup}\label{s:eval:setup}
 
@@ -74,13 +73,17 @@ Therefore, doing the FIFO scheduling at the \name, as is done by the \baseline, 
 \subsection{Real Internet Paths}\label{s:eval:realworld}
 \input{realworld}
 
-\radhika{will do a pass on this subsection. Purpose, expt setup, and takeaways are not coming across as sharply. Might need a quick chat.}
+%\radhika{will do a pass on this subsection. Purpose, expt setup, and takeaways are not coming across as sharply. Might need a quick chat.}
+
+
+We next evaluate our prototype implementation on real Internet paths to answer three key questions that our emulated setup did not answer: (i) Does congestion (and queuing) occur in the middle of the network to make \name useful? (ii) Is buffer-filling cross traffic rare enough in practice to ensure that \name provides a net improvement in performance? and (iii) Is \name's design robust to multi-pathing effects in a real network?  
+Our results reveal an affirmative answe
 
 Is there queueing on real Internet paths, and if so, can \name effectively control those queues?
-An interesting real-Internet scenario to consider is load-balancing, a widely used technique for reducing the congestion on any one path.
-Here, we make two observations: 
-(1) while bundle traffic may traverse multiple intermediate paths, it will converge on the receiving domain (and the \outbox). If the bottleneck is near the receiving domain, the bundled traffic will still build queues.
-(2) from the bundle's perspective, multiple paths appear as multiple queues, with some aggregate bandwidth capacity (\ie the max-flow of the network paths between the sending and receiving domains). While queueing may be unevenly distributed among the paths, the distribution of flows onto paths is currently random (\eg via ECMP). With \name, all these queues are moved to the \inbox, so it can schedule bundled flows deliberately rather than randomly.
+% An interesting real-Internet scenario to consider is load-balancing, a widely used technique for reducing the congestion on any one path.
+% Here, we make two observations: 
+% (1) while bundle traffic may traverse multiple intermediate paths, it will converge on the receiving domain (and the \outbox). If the bottleneck is near the receiving domain, the bundled traffic will still build queues.
+% (2) from the bundle's perspective, multiple paths appear as multiple queues, with some aggregate bandwidth capacity (\ie the max-flow of the network paths between the sending and receiving domains). While queueing may be unevenly distributed among the paths, the distribution of flows onto paths is currently random (\eg via ECMP). With \name, all these queues are moved to the \inbox, so it can schedule bundled flows deliberately rather than randomly.
 
 To measure this effect, we measure the latency of 10 parallel, closed-loop UDP senders with 40-byte requests. Each UDP sender uses a different port, to gain visibility across multiple paths, if applicable.
 We gather baseline latency measurements on five bundles sent from a GCP datacenter in Iowa to GCP datacenters in Belgium, Frankfurt, Oregon, South Carolina, and Tokyo and measure queueing\footnote{We use GCP's ``Standard Networking'' option, since our focus is the public Internet.}
