--- a/lowdelays.tex
+++ b/lowdelays.tex
@@ -15,5 +15,6 @@ Bundler    &  4.25   &    15.32   \\
     \label{fig:eval:lowdelays}
 \end{tabular}
 \end{center}
+    \vspace{-10pt}
     \caption{Using CoDel at \name reduces end-to-end packet delays.}\label{t:eval:codel}
 \end{table}
