--- a/strict-prio.tex
+++ b/strict-prio.tex
@@ -10,6 +10,7 @@ Bundler (SFQ)     &  \overviewBenefitsBundlerMedian  &  \overviewBenefitsBundler
     \label{fig:eval:strict-prio}
 \end{tabular}
 \end{center}
+    \vspace{-10pt}
 \caption{Using strict prioritization further reduces FCTs for the higher-priority class of traffic.}\label{t:eval:prio}
 \end{table}
 \newcommand{\strictPrioTailImprovementOverFq}{47\%\xspace}
