--- a/eval.tex
+++ b/eval.tex
@@ -77,7 +77,7 @@ Therefore, doing the FIFO scheduling at the \name, as is done by the \baseline, 
 
 
 We next evaluate our prototype implementation on real Internet paths to answer three key questions that our emulated setup did not answer: (1) Does congestion (and queuing) actually occur in the middle of the network?? (2) Is buffer-filling cross traffic rare enough in practice to ensure that \name provides a net improvement in performance? and (3) Is \name's design robust to multi-pathing effects in a real network?  
-Our results reveal an affirmative answer for all three questions. 
+Our results reveal an affirmative answer for all three questions. We explain our experiment setup and results below. 
 
 %Is there queueing on real Internet paths, and if so, can \name effectively control those queues?
 % An interesting real-Internet scenario to consider is load-balancing, a widely used technique for reducing the congestion on any one path.
@@ -86,13 +86,18 @@ Our results reveal an affirmative answer for all three questions.
 % (2) from the bundle's perspective, multiple paths appear as multiple queues, with some aggregate bandwidth capacity (\ie the max-flow of the network paths between the sending and receiving domains). While queueing may be unevenly distributed among the paths, the distribution of flows onto paths is currently random (\eg via ECMP). With \name, all these queues are moved to the \inbox, so it can schedule bundled flows deliberately rather than randomly.
 
 \Para{Experiment Setup} 
-We set up five bundles 
-We evaluate two different workloads: (i) 10 parallel close loop UDP   
-We measure the latency of 10 parallel, closed-loop UDP senders with 40-byte requests. Each UDP sender uses a different port, to gain visibility across multiple paths, if applicable.
-We gather baseline latency measurements on five bundles sent from a GCP datacenter in Iowa to GCP datacenters in Belgium, Frankfurt, Oregon, South Carolina, and Tokyo and measure queueing\footnote{We use GCP's ``Standard Networking'' option, since our focus is the public Internet.}
-by comparing this baseline to the same scenario with 20 backlogged senders.
-In all cases, we verified that the backlogged senders achieve similar throughput (2-4Gbit/s on these paths) with and without \name.
-Figure~\ref{fig:eval:realworld} shows one set of box-plots for each 5-tuple, for each of the five bundles. ``Base RTT'' bars show the latency without backlogged senders and ``Status Quo'' bars represent, as above, the latency with the backlogged senders but without \name.
+We set up five different bundles with a GCP datacenter in Iowa sending traffic to GCP datacenters in Belgium, Frankfurt, Oregon, South Carolina, and Tokyo.\footnote{We use GCP's ``Standard Networking'' option, since our focus is the public Internet.}
+We evaluate two different workloads: (i) Each bundle comprising of 10 parallel closed-loop UDP requests with 40 bytes of data, where a sender issues a new request up on receiving a previous response. We measure the request-response RTTs and use them as a baseline to evaluate \name's effectiveness (and call it Base RTT). (ii) We add 20 backlogged (iPerf) flows to the above workload in each bundle. Effective SFQ across all flows should not inflate the base request-response RTT. We run this workload both with and without \name and measure the UDP request-response RTTs (represented as \name and \baseline respectively).
+%We measure the latency of 10 parallel, closed-loop UDP senders with 40-byte requests. Each UDP sender uses a different port, to gain visibility across multiple paths, if applicable.
+%We gather baseline latency measurements on five bundles sent from a GCP datacenter in Iowa to GCP datacenters in Belgium, Frankfurt, Oregon, South Carolina, and Tokyo and measure queueing\footnote{We use GCP's ``Standard Networking'' option, since our focus is the public Internet.}
+%by comparing this baseline to the same scenario with 20 backlogged senders.
+We verified that the backlogged senders achieve similar throughput in all cases (2-4Gbit/s on these paths) with and without \name.
+
+\Para{Result} 
+Figure~\ref{fig:eval:realworld} shows the resulting RTT box-plots for each of the ten request-response loops (with the 5 tuples in UDP/IP headers differing across all ten) in each of the five bundles. %``Base RTT'' bars show the latency without backlogged senders and ``Status Quo'' bars represent, as above, the latency with the backlogged senders but without \name.
+We make the following key observations: (i) 
+
+(ii) The \baseline results further reveal that different request-response loops within a given bundle see different amounts of queueing in the network. This indicates possible ECMP load-balancing in the network based on the 5 tuples. 
 We observe multipath effects for all five bundles; while, as a result, some paths experience no queueing, all five bundles also experience queueing on at least half of the available paths.
 
 On the paths with queueing, because \name can prioritize the latency-sensitive requests, the latency those requests observe is significantly reduced. As a result, across the bundle as a whole, \name achieves \realworldMedianLatencyImprovement lower latencies than the status quo scenario over the 5 paths.
