--- a/eval.tex
+++ b/eval.tex
@@ -97,8 +97,8 @@ We verified that the backlogged senders achieve similar throughput in all cases 
 Figure~\ref{fig:eval:realworld} shows the resulting RTT box-plots for each of the ten request-response loops (with the 5 tuples in UDP/IP headers differing across all ten) in each of the five bundles. %``Base RTT'' bars show the latency without backlogged senders and ``Status Quo'' bars represent, as above, the latency with the backlogged senders but without \name.
 We make the following key observations: (i) 
 
-(ii) The \baseline results further reveal that different request-response loops within a given bundle see different amounts of queueing in the network. This indicates possible ECMP load-balancing in the network based on the 5 tuples. 
-We observe multipath effects for all five bundles; while, as a result, some paths experience no queueing, all five bundles also experience queueing on at least half of the available paths.
+(ii) The \baseline results further reveal that different request-response loops within a given bundle see different amounts of queueing in the network. This indicates possible ECMP based load-balancing in the network using the 5 tuples. \name is robust to its effects.
+%We observe multipath effects for all five bundles; while, as a result, some paths experience no queueing, all five bundles also experience queueing on at least half of the available paths.
 
 On the paths with queueing, because \name can prioritize the latency-sensitive requests, the latency those requests observe is significantly reduced. As a result, across the bundle as a whole, \name achieves \realworldMedianLatencyImprovement lower latencies than the status quo scenario over the 5 paths.
 
